<resources>
    <string name="app_name">오디</string>

    <!-- fcm_notification -->
    <string name="fcm_notification_entry">%s님이 들어왔어요.</string>
    <string name="fcm_notification_departure_reminder">%s님이 출발할 시간이에요!</string>
    <string name="fcm_notification_nudge">\uD83D\uDC40 %s님이 재촉해요.</string>
    <string name="fcm_notification_eta_notice">"%s 약속에 참여한 친구 위치를 확인해 보세요!"</string>

    <!-- item_notification_log.xml -->
    <string name="item_notification_entry">님이 들어왔어요.</string>
    <string name="item_notification_departure_reminder">님이 출발할 시간이에요!</string>
    <string name="item_notification_departure">님이 출발했어요.</string>
    <string name="item_notification_nudge">님이 재촉 받았어요. \uD83D\uDC40</string>
    <string name="item_notification_member_deletion">님이 오디를 떠났어요.</string>
    <string name="item_notification_member_exit">님이 나갔어요.</string>
    <string name="item_notification_default"> </string>

    <!-- activity_meeting_room.xml -->
    <string name="meeting_room_dashboard_button">오디?</string>

    <!-- item_invite_code_log.xml -->
    <string name="item_invite_code_top">초대 코드를 복사해</string>
    <string name="item_invite_code_bottom">친구에게 전달해 보세요!</string>
    <string name="item_invite_code_copy">복사하기</string>"

    <!-- fragment_destination.xml -->
    <string name="destination_question_front">오디</string>
    <string name="destination_question_back">서 만나시나요?</string>
    <string name="destination_question_hint">주소를 찾아보세요</string>
    <string name="destination_question_information">오디는 아직 수도권 외 지역을 지원하지 않아요</string>

    <!-- activity_meetings.xml -->
    <string name="meetings_traffic_guide">*대중교통 기준</string>
    <string name="meetings_departure_postfix">에서</string>
    <string name="meetings_arrival_postfix">까지</string>
    <string name="meetings_eta_form">%1$s분 걸려요</string>
    <string name="meetings_navigate_to_eta">오디?</string>
    <string name="meetings_today">오늘</string>
    <string name="meetings_tomorrow">내일</string>
    <string name="meetings_post_tomorrow">%1$s일 후</string>
    <string name="meetings_no_meeting_room_guide">아직 약속이 없어요.\n약속을 만들어 주세요!</string>
    <string name="meetings_notification_permission_required">알림 권한을 거절하실 경우 푸시 알람을 받으실 수 없어요</string>
    <string name="meetings_notification_permission_guide">알림 권한은 앱 설정에서 확인할 수 있어요</string>
    <string name="meetings_location_permission_required">위치 권한을 거절하면 내 위치를 친구에게 공유할 수 없어요</string>
    <string name="meetings_entrance_unavailable_guide">약속 시간 30분 전부터 실시간 위치를 확인할 수 있어요</string>
    <string name="meetings_back_pressed_guide">"앱을 종료하려면 뒤로 가기를 한 번 더 눌려주세요."</string>
    <string name="meetings_create_meeting">약속 만들기</string>
    <string name="meetings_join_meeting">약속 참여하기</string>

    <!-- fragment_meeting_destination.xml -->
    <string name="meeting_destination_question_front">오디</string>
    <string name="meeting_destination_question_back">서 만나시나요?</string>

    <!-- fragment_meeting_name.xml -->
    <string name="meeting_name_question_front">무슨&#160;</string>
    <string name="meeting_name_question_middle">약속</string>
    <string name="meeting_name_question_back">인가요?</string>
    <string name="meeting_name_question_hint">올리브와 저녁에 마라탕</string>
    <string name="meeting_name_length_separator">/</string>

    <!-- fragment_meeting_date.xml -->
    <string name="meeting_date_question_front">언제</string>
    <string name="meeting_date_question_back">만나시나요?</string>
    <string name="meeting_date_date_guide">오늘 이후의 날짜를 선택해 주세요!</string>

    <!-- fragment_meeting_time.xml -->
    <string name="meeting_time_question_front">몇시</string>
    <string name="meeting_time_question_back">에 만나시나요?</string>
    <string name="meeting_time_separator">:</string>
    <string name="invalid_meeting_time">현재 이후의 시간을 선택해 주세요!</string>

    <!-- fragment_join_nickname.xml -->
    <string name="nickname_question_front">닉네임</string>
    <string name="nickname_question_back">을 알려주세요!</string>
    <string name="nickname_question_hint">올리브</string>
    <string name="nickname_length_separator">/</string>

    <!-- fragment_join_departure.xml -->
    <string name="departure_question_front">오디</string>
    <string name="departure_question_back">서 출발하시나요?</string>

    <!-- activity_join_completion.xml -->
    <string name="join_completion_second_explain">약속에 참여했어요!</string>

    <!-- activity_invite_code.xml -->
    <string name="invite_code_input_front">초대 코드</string>
    <string name="invite_code_input_back">를 입력해 주세요!</string>
    <string name="invite_code_input_hint">초대 코드</string>
    <string name="invite_code_invalid_invite_code">초대 코드가 뭔가 이상한데요? 🤔</string>
    <string name="invite_code_already_participated">이미 참여한 약속입니다.</string>

    <!-- activity_login -->
    <string name="login_welcome_top">카카오톡으로</string>
    <string name="login_welcome_prefix">간편하게</string>
    <string name="login_welcome_ody">오디</string>
    <string name="login_welcome_postfix">시작하기</string>
    <string name="login_logout_success">로그아웃 되었습니다.</string>
    <string name="login_withdrawal_success">회원 탈퇴 되었습니다.</string>

    <!-- activity_setting -->
    <string name="setting_main_title">설정</string>
    <string name="setting_withdrawal_title_front">정말&#160;</string>
    <string name="setting_withdrawal_title_middle">오디</string>
    <string name="setting_withdrawal_title_back">를 떠나시겠어요?</string>
    <string name="setting_withdrawal_subtitle">참여한 약속들이 모두 사라져요.</string>
    <string name="setting_withdrawal_button">탈퇴</string>
    <string name="setting_notification_permission_denied">알림 권한이 꺼져있어요.</string>
    <string name="setting_notification_permission_guide">권한 허용하러 가기</string>

    <!-- item_setting -->
    <string name="setting_header_notification">알림</string>
    <string name="setting_item_notification_departure">출발 시간 푸시 알림</string>
    <string name="setting_item_notification_entry">약속 참여 푸시 알림</string>
    <string name="setting_header_service">서비스 이용</string>
    <string name="setting_item_privacy_policy">개인정보 처리 방침</string>
    <string name="setting_item_term">서비스 이용 약관</string>
    <string name="setting_item_logout">로그아웃</string>
    <string name="setting_item_withdraw">회원 탈퇴</string>

    <!-- request_background_permission_dialog -->
    <string name="request_background_permission_dialog_title">백그라운드 위치 권한을 위해 항상 허용으로 설정해주세요.</string>
    <string name="request_background_permission_dialog_yes">네</string>
    <string name="request_background_permission_dialog_no">아니오</string>

    <!-- fragment_notification_log -->
    <string name="notification_log_mate_count">%d명</string>
    <string name="invite_code_copy_title">초대 코드 공유하기</string>
    <string name="invite_code_copy">%s 약속에 초대했어요. 오디 앱에서 함께해 보세요.\n초대 코드: %s</string>

    <!-- item_eta_dashboard.xml -->
    <string name="badge_arrived">도착</string>
    <string name="badge_arrival_soon">도착 예정</string>
    <string name="badge_late">지각</string>
    <string name="badge_late_warning">지각 위기</string>
    <string name="badge_missing">행방불명</string>
    <string name="status_arrived">-</string>
    <string name="status_arrival_remain_time">%d분 후 도착</string>
    <string name="status_arrival_soon">10분 내 도착</string>
    <string name="status_missing">오디</string>
    <string name="question_mark">\?</string>
    <string name="location_permission_self_guide">위치 권한을 켜서 오디인지 공유해 보세요.</string>
    <string name="location_permission_friend_guide">친구의 위치 권한이 꺼져있어요.</string>
    <string name="nudge_success">%s에게 빨리 오라고 재촉했어요!</string>
    <string name="nudge_time_limit_expired">약속 시간 30분 이후에는 재촉할 수 없어요</string>
    <string name="nudge_failure">%d초 후에 다시 재촉할 수 있어요.</string>
    <string name="eta_dashboard_share_description">친구들의 도착 예정 정보를 확인해보세요!</string>
    <string name="eta_dashboard_share_button">확인하러 가기</string>
    <string name="eta_dashboard_background_location">친구와 도착 정보를 공유하고 있어요.</string>

    <!-- activity_eta_dashboard_guide_first.xml -->
    <string name="eta_dashboard_guide_title">성수에서 감자탕 먹기</string>
    <string name="eta_dashboard_guide_late_warning_nudge">지각 위기 버튼을 눌러\n친구를 재촉해 보세요.</string>
    <string name="eta_dashboard_guide_before_meeting_time">약속 시간 30분 전부터\n친구들의 위치 현황을 확인해 보세요.</string>

    <!-- activity_eta_dashboard_guide_second.xml -->
    <string name="eta_dashboard_guide_late_nudge">지각 버튼을 눌러\n친구를 재촉해 보세요.</string>
    <string name="eta_dashboard_guide_after_meeting_time">약속 시간 이후부터는\n친구들의 지각 여부를 확인할 수 있어요.</string>

    <!-- fragment_address_search.xml -->
    <string name="address_search_toolbar_title">장소 찾기</string>
    <string name="address_search_hint">주소나 상호명을 검색해 보세요</string>
    <string name="address_search_empty">검색 결과가\n존재하지 않아요.</string>

    <!-- dialog_exit_room.xml -->
    <string name="exit_meeting_room_title">약속을 정말 나가실 건가요?</string>
    <string name="exit_meeting_room">나가기</string>

    <!-- fragment_detail_meeting.xml -->
    <string name="detail_meeting_time">약속 시간</string>
    <string name="detail_meeting_address">약속 장소</string>
    <string name="detail_meeting_departure_address">출발 장소</string>
    <string name="detail_meeting_departure_time">늦지 않으려면</string>
    <string name="detail_meeting_departure_time_guide">출발 시간은 대중교통 지연 등을 고려해\n 여유 있게 알려드리고 있어요.</string>
    <string name="detail_meeting_departure_time_content">%s에 나가야 해요.\n출발 장소부터 약속 장소까지 %s걸려요.</string>
    <string name="detail_meeting_ody">오디?</string>
    <string name="detail_meeting_log">약속 로그</string>
    <string name="detail_meeting_invite_code_guide">친구를 초대해 보세요!</string>
    <string name="detail_meeting_invite_code_copy">초대 코드 복사하기</string>

    <!-- all -->
    <string name="next_button">다음</string>
    <string name="confirm_button">확인</string>
    <string name="cancel_button">취소</string>
    <string name="close_button">닫기</string>
    <string name="address_question_hint">주소를 찾아보세요</string>
    <string name="address_question_information">오디는 아직 수도권 외 지역을 지원하지 않아요</string>
    <string name="invalid_address">지원하지 않는 지역이에요. 다시 선택해 주세요.</string>
    <string name="default_location_error_guide">현재 위치를 가져올 수 없어요. 잠시 후 다시 시도해 주세요.</string>
    <string name="error_guide">오류가 발생했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="network_error_guide">네트워크 연결 확인 후 다시 시도해 주세요.</string>
    <string name="retry_button">재시도</string>
</resources>
