<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.woowacourse.ody.presentation.join.MeetingJoinViewModel" />

        <variable
            name="nextListener"
            type="com.woowacourse.ody.presentation.common.listener.NextListener" />

        <variable
            name="backListener"
            type="com.woowacourse.ody.presentation.common.listener.BackListener" />

        <variable
            name="addressSearchListener"
            type="com.woowacourse.ody.presentation.address.listener.AddressSearchListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.join.MeetingJoinActivity">

        <include
            android:id="@+id/tb_join_info"
            layout="@layout/toolbar_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backListener="@{backListener}"
            app:layout_constraintBottom_toTopOf="@id/tv_departure_front"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_departure_front"
            style="@style/pretendard_bold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/departure_question_front"
            android:textColor="@color/purple_800"
            app:layout_constraintEnd_toStartOf="@id/tv_departure_back"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_join_info" />

        <TextView
            android:id="@+id/tv_departure_back"
            style="@style/pretendard_bold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_question_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tv_departure_front"
            app:layout_constraintTop_toTopOf="@id/tv_departure_front" />

        <EditText
            android:id="@+id/et_departure"
            style="@style/edit_text_style"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="32dp"
            android:focusable="false"
            android:hint="@string/address_question_hint"
            android:inputType="text"
            android:maxLines="1"
            android:onClick="@{() -> addressSearchListener.onSearch()}"
            app:layout_constraintBottom_toTopOf="@id/tv_departure_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_departure_front" />

        <TextView
            android:id="@+id/tv_departure_information"
            style="@style/pretendard_regular_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/address_question_information"
            android:textColor="@color/purple_800"
            app:layout_constraintStart_toStartOf="@id/et_departure"
            app:layout_constraintTop_toBottomOf="@id/et_departure" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/bottom_button_style"
            android:enabled="@{vm.isValidDeparture}"
            android:onClick="@{() -> nextListener.onNext()}"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
