<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_meeting_time_front"
        style="@style/pretendard_bold_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/meeting_time_question_front"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toStartOf="@id/tv_meeting_time_back"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_meeting_time_back"
        style="@style/pretendard_bold_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meeting_time_question_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/tv_meeting_time_front"
        app:layout_constraintTop_toTopOf="@id/tv_meeting_time_front" />

    <NumberPicker
        android:id="@+id/np_meeting_time_hour"
        style="@style/number_picker_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:theme="@style/number_picker_style"
        app:layout_constraintEnd_toStartOf="@id/tv_meeting_time_separator"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_meeting_time_front" />

    <TextView
        android:id="@+id/tv_meeting_time_separator"
        style="@style/pretendard_bold_28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/meeting_time_separator"
        app:layout_constraintBottom_toBottomOf="@id/np_meeting_time_hour"
        app:layout_constraintEnd_toStartOf="@id/np_meeting_time_minute"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/np_meeting_time_hour"
        app:layout_constraintTop_toTopOf="@id/np_meeting_time_hour" />

    <NumberPicker
        android:id="@+id/np_meeting_time_minute"
        style="@style/number_picker_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/number_picker_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/tv_meeting_time_separator"
        app:layout_constraintTop_toTopOf="@id/np_meeting_time_hour" />

    <Button
        android:id="@+id/btn_next_meeting_time"
        style="@style/bottom_button_style"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
