<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.ydo.ody.presentation.invitecode.InviteCodeViewModel" />

        <variable
            name="backListener"
            type="com.ydo.ody.presentation.common.listener.BackListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar_back"
            app:backListener="@{backListener}" />

        <TextView
            android:id="@+id/tv_invite_front"
            style="@style/pretendard_bold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/invite_code_input_front"
            android:textColor="@color/purple_800"
            app:layout_constraintEnd_toStartOf="@id/tv_invite_back"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/tv_invite_back"
            style="@style/pretendard_bold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_code_input_back"
            android:textColor="@color/gray_800"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tv_invite_front"
            app:layout_constraintTop_toTopOf="@id/tv_invite_front" />

        <EditText
            android:id="@+id/et_invite_code_form"
            style="@style/edit_text_style"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="52dp"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_invite_front" />

        <EditText
            android:id="@+id/et_invite_code"
            style="@style/edit_text_style"
            android:layout_width="0dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:hint="@string/invite_code_input_hint"
            android:inputType="text"
            android:maxLines="1"
            android:text="@={vm.inviteCode}"
            app:layout_constraintEnd_toStartOf="@id/iv_cancel"
            app:layout_constraintStart_toStartOf="@id/et_invite_code_form"
            app:layout_constraintTop_toTopOf="@id/et_invite_code_form" />

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.clearInviteCode()}"
            android:src="@drawable/ic_round_cancel"
            app:layout_constraintBottom_toBottomOf="@id/et_invite_code_form"
            app:layout_constraintEnd_toEndOf="@id/et_invite_code_form"
            app:layout_constraintStart_toEndOf="@id/et_invite_code"
            app:layout_constraintTop_toTopOf="@id/et_invite_code_form"
            app:visibility="@{vm.hasInviteCode}" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            style="@style/pretendard_bold_16"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangle_radius_20"
            android:backgroundTint="@drawable/selector_button_color"
            android:enabled="@{vm.hasInviteCode}"
            android:onClick="@{() -> vm.checkInviteCode()}"
            android:text="@string/confirm_button"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_invite_code_form" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
