<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.mulberry.ody.presentation.feature.creation.MeetingCreationViewModel" />

        <variable
            name="addressSearchListener"
            type="com.mulberry.ody.presentation.feature.address.listener.AddressSearchListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_destination_front"
            style="@style/pretendard_bold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/meeting_destination_question_front"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toStartOf="@id/tv_destination_back"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_destination_back"
            style="@style/pretendard_bold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_destination_question_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tv_destination_front"
            app:layout_constraintTop_toTopOf="@id/tv_destination_front" />

        <EditText
            android:id="@+id/et_destination"
            style="@style/edit_text_style"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="32dp"
            android:focusable="false"
            android:hint="@string/address_question_hint"
            android:inputType="text"
            android:maxLines="1"
            android:text="@{vm.destinationAddress.detailAddress}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_destination_front"
            app:onSingleClick="@{() -> addressSearchListener.onSearch()}" />

        <ImageView
            android:id="@+id/iv_current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_current_location"
            app:layout_constraintBottom_toBottomOf="@id/et_destination"
            app:layout_constraintEnd_toEndOf="@id/et_destination"
            app:layout_constraintTop_toTopOf="@id/et_destination"
            app:onSingleClick="@{() -> vm.getDefaultLocation()}"
            app:visibility="@{vm.destinationAddress == null}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
